--- a/app/src/main/res/layout/dialog_fragment_tooltip.xml
+++ b/app/src/main/res/layout/dialog_fragment_tooltip.xml
@@ -31,6 +31,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_close"
+            android:accessibilityTraversalAfter="@id/tvContent"
+            android:contentDescription="@string/common_close"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/tvTitle"
             app:layout_constraintTop_toTopOf="parent" />
