--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -26,8 +26,9 @@
             android:id="@+id/vDetail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingHorizontal="32dp"
-            android:layout_marginTop="20dp">
+            android:layout_marginTop="20dp"
+            android:importantForAccessibility="yes"
+            android:paddingHorizontal="32dp">
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/tvTitle"
@@ -35,6 +36,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="12dp"
                 android:layout_marginStart="30dp"
+                android:importantForAccessibility="no"
                 android:textColor="@color/black"
                 android:textSize="16sp"
                 android:textStyle="bold"
@@ -54,6 +56,7 @@
                 android:layout_marginStart="30dp"
                 android:focusable="true"
                 android:src="@drawable/ic_info"
+                android:contentDescription="@string/tooltip_description"
                 app:layout_constraintBottom_toBottomOf="@id/tvTitle"
                 app:layout_constraintEnd_toStartOf="@id/barrier"
                 app:layout_constraintStart_toEndOf="@id/tvTitle"
@@ -71,6 +74,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
+                android:importantForAccessibility="no"
                 android:textColor="@color/grey_text"
                 app:layout_constraintBottom_toTopOf="@id/tvDate"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -87,6 +91,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
                 android:layout_marginBottom="12dp"
+                android:importantForAccessibility="no"
                 android:textColor="@color/grey_text"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -111,6 +116,8 @@
             android:paddingVertical="15dp">
 
             <androidx.appcompat.widget.LinearLayoutCompat
+                android:id="@+id/vItem1n2"
+                android:importantForAccessibility="yes"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="5dp"
@@ -120,6 +127,7 @@
 
                 <androidx.appcompat.widget.AppCompatTextView
                     android:id="@+id/tvLabel1"
+                    android:importantForAccessibility="no"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="@color/black"
@@ -129,6 +137,7 @@
 
                 <androidx.appcompat.widget.AppCompatTextView
                     android:id="@+id/tvLabel2"
+                    android:importantForAccessibility="no"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="15dp"
@@ -145,6 +154,8 @@
                 android:background="@color/black" />
 
             <androidx.appcompat.widget.LinearLayoutCompat
+                android:id="@+id/vItem3n4"
+                android:importantForAccessibility="yes"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="5dp"
@@ -154,6 +165,7 @@
 
                 <androidx.appcompat.widget.AppCompatTextView
                     android:id="@+id/tvLabel3"
+                    android:importantForAccessibility="no"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="@color/black"
@@ -163,6 +175,7 @@
 
                 <androidx.appcompat.widget.AppCompatTextView
                     android:id="@+id/tvLabel4"
+                    android:importantForAccessibility="no"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="15dp"
