--- a/app/src/main/res/layout/view_holder_image.xml
+++ b/app/src/main/res/layout/view_holder_image.xml
@@ -3,11 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/vRow"
+    android:importantForAccessibility="yes"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/white">
 
     <androidx.appcompat.widget.AppCompatImageView
+        android:importantForAccessibility="no"
         android:id="@+id/ivImage"
         android:layout_width="50dp"
         android:layout_height="50dp"
@@ -30,6 +32,7 @@
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tvTitle"
+        android:importantForAccessibility="no"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
@@ -45,6 +48,7 @@
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tvDate"
+        android:importantForAccessibility="no"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
