--- a/app/src/main/res/layout/custom_row_view.xml
+++ b/app/src/main/res/layout/custom_row_view.xml
@@ -65,6 +65,7 @@
         android:id="@+id/ivForward"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
+        android:importantForAccessibility="no"
         android:padding="12dp"
         android:src="@drawable/ic_forward"
         app:layout_constraintBottom_toBottomOf="parent"
