--- a/app/src/main/res/layout/dialog_fragment_tooltip.xml
+++ b/app/src/main/res/layout/dialog_fragment_tooltip.xml
@@ -20,6 +20,7 @@
             android:textColor="@color/black"
             android:textSize="28sp"
             android:textStyle="bold"
+            android:focusable="true"
             app:layout_constraintBottom_toTopOf="@id/tvContent"
             app:layout_constraintEnd_toStartOf="@id/ivClose"
             app:layout_constraintStart_toStartOf="parent"
@@ -30,6 +31,7 @@
             android:id="@+id/ivClose"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:contentDescription="@string/common_close"
             android:src="@drawable/ic_close"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/tvTitle"
