--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -20,6 +20,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
+            android:importantForAccessibility="no"
             android:src="@drawable/bacteria" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -27,7 +28,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingHorizontal="32dp"
-            android:layout_marginTop="20dp">
+            android:layout_marginTop="20dp"
+            android:focusable="true">
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/tvTitle"
@@ -52,6 +54,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="30dp"
+                android:contentDescription="@string/tooltip_description"
                 android:focusable="true"
                 android:src="@drawable/ic_info"
                 app:layout_constraintBottom_toBottomOf="@id/tvTitle"
@@ -115,6 +118,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="5dp"
                 android:layout_weight="1"
+                android:focusable="true"
                 android:gravity="center"
                 android:orientation="vertical">
 
@@ -149,6 +153,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="5dp"
                 android:layout_weight="1"
+                android:focusable="true"
                 android:gravity="center"
                 android:orientation="vertical">
 
