--- a/app/src/main/res/layout/view_holder_row.xml
+++ b/app/src/main/res/layout/view_holder_row.xml
@@ -5,7 +5,8 @@
     android:id="@+id/vRow"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/white">
+    android:background="@color/white"
+    android:focusable="true">
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tvTitle"
@@ -69,6 +70,7 @@
         android:id="@+id/ivForward"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
+        android:importantForAccessibility="no"
         android:padding="12dp"
         android:src="@drawable/ic_forward"
         app:layout_constraintBottom_toBottomOf="parent"
