--- a/app/src/main/res/layout/view_holder_row_with_custom.xml
+++ b/app/src/main/res/layout/view_holder_row_with_custom.xml
@@ -3,4 +3,5 @@
     android:id="@+id/vCustomRowView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/white" />
+    android:background="@color/white"
+    android:focusable="true" />
