--- a/app/src/main/res/layout/view_holder_image.xml
+++ b/app/src/main/res/layout/view_holder_image.xml
@@ -5,7 +5,8 @@
     android:id="@+id/vRow"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/white">
+    android:background="@color/white"
+    android:focusable="true">
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/ivImage"
