--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.accessibilitytraining.android" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.AccessibilityTraining.Android" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@android:color/holo_green_light</item>
         <item name="colorPrimaryVariant">@android:color/holo_green_dark</item>
@@ -12,7 +12,7 @@
         <!-- Customize your theme here. -->
     </style>
 
-    <style name="Theme.accessibilitytraining.android.NoActionBar">
+    <style name="Theme.AccessibilityTraining.Android.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
